--- a/templates/free-apply.html
+++ b/templates/free-apply.html
@@ -43,10 +43,7 @@
   </head>
   <body>
     <h1>무료 체험 신청</h1>
-    <button
-      class="back-btn"
-      onclick="window.location.href='../index.html#section_4'"
-    >
+    <button class="back-btn" onclick="window.location.href='../index.html'">
       되돌아가기
     </button>
   </body>
