--- a/templates/sales.html
+++ b/templates/sales.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>의사결정 대시보드</title>
+    <title>매출</title>
     <style>
       body {
         font-family: sans-serif;
@@ -42,11 +42,8 @@
     </style>
   </head>
   <body>
-    <h1>의사결정 대시보드</h1>
-    <button
-      class="back-btn"
-      onclick="window.location.href='../index.html#section_4'"
-    >
+    <h1>매출</h1>
+    <button class="back-btn" onclick="window.location.href='../index.html'">
       되돌아가기
     </button>
   </body>
