--- a/css/header.css
+++ b/css/header.css
@@ -42,6 +42,7 @@ header.hide {
   margin-left: 8px;
   padding: 8px 16px;
   color: #fff;
+  font-size: medium;
   background: #2563eb;
   border: none;
   border-radius: 999px;
